kubernetes_installation/prometheus/prometheus-grafana-alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-grafana-alertmanager
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: nginx
  labels:
    app: prometheus-grafana-alertmanager
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.monitor.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana-stack-k-prometheus
            port:
              number: 9090
  - host: grafana.monitor.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana-stack
            port:
              number: 80
  - host: alertmanager.monitor.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana-stack-k-alertmanager
            port:
              number: 9093
